--- a/src/styles/components/pages/admin/GeneralSettingsTable.scss
+++ b/src/styles/components/pages/admin/GeneralSettingsTable.scss
@@ -129,19 +129,18 @@
       display: flex;
       flex-direction: column;
       gap: 1em;
-      @include w.breakpoint-up (large) {width: 700px; margin-inline: auto}
+      @include w.breakpoint-up (large) {width: 900px; margin-inline: auto}
 
       &__itm {
         display: grid;
         // gap: 0 1em;
-        grid-template-columns: auto auto auto 15em;
+        grid-template-columns: auto auto auto 12em;
         grid-template-areas:
         'count up-arrow alt delete-btn'
         'count down-arrow alt delete-btn'
         ;
-        align-items: center;
         @include w.breakpoint-up (medium) { grid-template-columns: 4em auto auto 15em }
-        @include w.breakpoint-up (large) { width: 700px; grid-template-columns: 4em auto auto 15em }
+        align-items: center;
 
         &__count {
           grid-area: count;
@@ -249,7 +248,7 @@
         &__delete-btn {
           grid-area: delete-btn;
           position: relative;
-          width: 15em;
+          width: 100%;
           margin-left: auto;
 
           &:hover::before {opacity: 1}
@@ -284,12 +283,13 @@
 
     &__wrapper {
       position: relative;
-      width: 15em;
+      width: 12em;
       aspect-ratio: 16 / 9;
       @include w.breakpoint-up(large) {aspect-ratio: 2.39 / 1}
       @include w.breakpoint-up(xlarge) {aspect-ratio: 2.5 / 1}
+      @include w.breakpoint-up(medium) {width: 15em}
       @include w.breakpoint-up (large) {
-        width: 700px;
+        width: 900px;
         margin-inline: auto;
       }
       margin-left: auto;
@@ -300,12 +300,16 @@
         position: absolute;
         top: 0;
         right: 0;
-        width: 15em;
+        width: 12em;
+        @include w.breakpoint-up(medium) {width: 15em}
+
         aspect-ratio: 16 / 9;
-        border: dashed 5px hsla(0, 0%, 0%, 0.5);
-        body.dark-theme & { border: dashed 5px hsla(0, 0%, 100%, 0.5) }
         @include w.breakpoint-up(large) {aspect-ratio: 2.39 / 1}
         @include w.breakpoint-up(xlarge) {aspect-ratio: 2.5 / 1}
+
+        border: dashed 5px hsla(0, 0%, 0%, 0.5);
+        body.dark-theme & { border: dashed 5px hsla(0, 0%, 100%, 0.5) }
+
         background-color: var(--light-background-color);
         background-image: var(--add-icon);
         background-repeat: no-repeat;
@@ -320,7 +324,8 @@
         right: 0;
         opacity: 0;
         z-index: 20;
-        width: 15em;
+        width: 12em;
+        @include w.breakpoint-up(medium) {width: 15em}
         aspect-ratio: 16 / 9;
         @include w.breakpoint-up(large) {aspect-ratio: 2.39 / 1}
         @include w.breakpoint-up(xlarge) {aspect-ratio: 2.5 / 1}
